# libcamera-apps

./: CMakeLists.txt  README.md  cmdline.txt  config.txt  install_dependencies.sh  meson.build  rc.local  shaderValues.txt
apps/: RED.cpp  libcamera_hello.cpp  meson.build  rpicam_hello.cpp
core/: libcamera_app.cpp  libcamera_app.hpp  rpicam_app.cpp  rpicam_app.hpp
preview/: egl_preview.cpp  preview.hpp
